--- a/dita/garage/garage.ditamap
+++ b/dita/garage/garage.ditamap
@@ -16,7 +16,8 @@
                 <data name="image" href="image/tiles/maintenance_big.png" format="png"/>
             </data>  
         </topicmeta>
-        <topicref href="tasks/changingtheoil.dita" type="task" audience="expert"/>        
+        <topicref href="tasks/changingtheoil.dita" type="task" audience="expert"/>
+        <topicref href="electric-cars/battery.dita"/>        
         <topicref href="tasks/washingthecar.dita" type="task"/>
     </topicref>
     <topicref href="tasks/garagetaskoverview.dita" type="concept" audience="expert novice"
